--- a/methods/guest/Cargo.toml
+++ b/methods/guest/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 # TODO: Rename this package to change the method name from METHOD_NAME
-name = "multiply"
+name = "json"
 version = "0.1.0"
 edition = "2021"
 
