--- a/methods/guest/Cargo.toml
+++ b/methods/guest/Cargo.toml
@@ -8,4 +8,6 @@ edition = "2021"
 
 [dependencies]
 # If you want to try (experimental) std support, add `features = [ "std" ]` to risc0-zkvm
-risc0-zkvm = { version = "0.16.1", default-features = false }
+risc0-zkvm = { version = "0.16.1", default-features = false, features = ["std"] }
+json = "0.12"
+json-core = { path = "../../core" }
