--- a/host/Cargo.toml
+++ b/host/Cargo.toml
@@ -7,3 +7,4 @@ edition = "2021"
 json-methods = { path = "../methods" }
 risc0-zkvm = { version = "0.16.1", features = ["metal"] }
 serde = "1.0"
+clap = {version = "4.0", features = ["derive"]}
