--- a/host/Cargo.toml
+++ b/host/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-json-methods = { path = "../methods" }
+json-compare-methods = { path = "../methods" }
 risc0-zkvm = { version = "0.16.1", features = ["metal"] }
 serde = "1.0"
 clap = {version = "4.0", features = ["derive"]}
