--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,10 @@
 [workspace]
 members = [
     "host",
-    "methods",
+    "methods/guest",
     "core",
 ]
+default-members = ["host"]
 
 # Always optimize; building and running the guest takes much longer without optimization.
 [profile.dev]
